# e-ring-voting

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: bench_chain.py  bench_otrs.py
chain/: __init__.py  auditor.py  block.py  cli.py  mining.py  node.py  state.py  transactions.py
docs/: Makefile  eli5.tex  notes.tex
legacy/: README.md
otrs/: __init__.py  _libsodium.py  group.py  hash.py  otrs.py  serialize.py
paper/: Makefile  artifact.md  artifact.tex  threat_model.md
tests/: conftest.py  regression_vectors.py  test_chain.py  test_election.py  test_group.py  test_hash.py  test_log.py  test_otrs.py  test_properties.py  test_serialize.py  test_threshold.py
voting/: __init__.py  auditor.py  cli.py  log.py  manager.py  records.py  voter.py  witness.py
